# mindquantum

./: CMakeLists.txt  RELEASE.md  build.sh  setup.py
cmake/: projectq.cmake  pybind11.cmake  quest.cmake  utils.cmake
mindquantum/: __init__.py
mindquantum/ansatz/: hardware_efficient.py  max_2_sat.py  max_cut.py  qubit_ucc.py  unitary_cc.py
mindquantum/circuit/: circuit.py  high_level_ops.py  state_evolution.py  time_evolution.py  uccsd.py
mindquantum/gate/: __init__.py  basic.py  basicgate.py  hamiltonian.py  measurement.py
mindquantum/nn/: __init__.py  layer.py  operations.py
mindquantum/parameterresolver/: parameterresolver.py
mindquantum/simulator/: __init__.py  simulator.py
mindquantum/src/: CMakeLists.txt  binding.cc  popcnt.h  type.h  utils.cc  utils.h
mindquantum/src/backends/: CMakeLists.txt
mindquantum/src/backends/projectq/: CMakeLists.txt  projectq.h  projectq_utils.h
mindquantum/src/backends/quest/: CMakeLists.txt  quest.h  quest_utils.h
mindquantum/src/gate/: basic_gate.h  gates.h
mindquantum/src/hamiltonian/: hamiltonian.h
mindquantum/src/matrix/: two_dim_matrix.h
mindquantum/src/pr/: parameter_resolver.h
mindquantum/src/projector/: projector.h
mindquantum/src/sparse/: algo.h  csrhdmatrix.h  paulimat.h  sparse_utils.h
mindquantum/utils/: __init__.py  f.py
mindquantum/utils/display/: __init__.py  text_drawer.py
mindquantum/utils/qasm/: __init__.py  hiqqasm.py  openqasm.py
tests/st/test_ansatz/: test_hardware_efficient.py  test_max_2_sat.py  test_max_cut.py  test_qubit_ucc.py  test_ucc.py
tests/st/test_circuit/: test_circuit.py  test_high_level_ops.py
tests/st/test_hiqfermion/: test_quccsd.py  test_transforms.py  test_uccsd0.py
tests/st/test_nn/: test_mindquantum.py  test_nn.py
tests/st/test_parameter_resolver/: test_parameter_resolver.py
tutorials/: iris_classification.ipynb  qnn_for_nlp.ipynb  quantum_approximate_optimization_algorithm.ipynb  vqe_for_quantum_chemistry.ipynb
tutorials/benchmarks/mnist/: mnist.py
tutorials/examples/: phase_estimation.py
tutorials/source/: iris_classification.py  qnn_for_nlp.py  quantum_approximate_optimization_algorithm.py  vqe_for_quantum_chemistry.py
(+3 files in other folders)
